--- a/.github/workflows/macos-release.yml
+++ b/.github/workflows/macos-release.yml
@@ -32,8 +32,7 @@ jobs:
 
       - name: Create zip archive
         run: |
-          cd dist
-          zip -r tchMaterial-parser-mac.zip tchMaterial-parser.app
+          zip -r tchMaterial-parser-mac.zip dist
 
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v2
