--- a/.github/workflows/macos-release.yml
+++ b/.github/workflows/macos-release.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/tchMaterial-parser-mac.zip
+          files: ./tchMaterial-parser-mac.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
