fix(build-release): disallowed `.app` file extension
Signed-off-by: 晨叶梦春 <65224318+wuziqian211@users.noreply.github.com>

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -115,11 +115,14 @@ jobs:
       - name: Build app with PyInstaller
         run: |
           .venv/bin/pyinstaller ./tchMaterial-parser.spec
+      - name: Create zip archive
+        run: |
           cd dist
           mv tchMaterial-parser tchMaterial-parser-mac-arm64.app
+          zip -r tchMaterial-parser-mac-arm64.zip tchMaterial-parser-mac-arm64.app
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v2
         with:
-          files: dist/tchMaterial-parser-mac-arm64.app
+          files: dist/tchMaterial-parser-mac-arm64.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
