--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -109,10 +109,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
+      
       - name: Set up Python
         uses: actions/setup-python@v6
         with:
-          python-version: '3.12' # 建议改用 3.12 稳定版，3.14 太新可能导致其他问题
+          python-version: '3.12' # 推荐使用 3.12 稳定版
+      
       - name: Install dependencies
         run: |
           python -m venv .venv
@@ -123,27 +125,37 @@ jobs:
       
       - name: Build app with PyInstaller
         run: |
-          # 1. 去掉 --onefile，因为 .spec 文件里已经包含配置了
-          # 2. 加上 --clean 清理缓存
-          .venv/bin/pyinstaller --clean ./tchMaterial-parser.spec
+          # 激活虚拟环境
+          source .venv/bin/activate
+          
+          # 执行打包命令
+          # --clean: 清理缓存
+          # --onefile: 强制生成单文件
+          # --name: 指定输出文件名
+          # --add-data: 打包资源文件 (格式为 源路径:目标路径)
+          # src/tchMaterial-parser.pyw: 你的入口脚本
+          
+          pyinstaller --clean --onefile --name tchMaterial-parser \
+            --add-data "res:res" \
+            --add-data "version.txt:." \
+            src/tchMaterial-parser.pyw
 
       - name: Sign the binary
         run: |
-          # 【关键步骤】对生成的二进制文件进行 Ad-hoc 签名
-          # 假设 spec 文件生成的默认名字是 tchMaterial-parser
+          # 对生成的单文件进行 Ad-hoc 签名
+          # 这一步是解决“文件已损坏”的核心
           codesign --force --deep --sign - dist/tchMaterial-parser
 
       - name: Create zip archive
         run: |
           cd dist
-          # 【关键步骤】不要重命名为 .app！
-          # 直接改名为更有辨识度的名字（无后缀，或者加 .command）
+          # 改名为带架构后缀的文件名
           mv tchMaterial-parser tchMaterial-parser-mac-arm64
           
-          # 赋予可执行权限
+          # 赋予可执行权限（双重保险）
           chmod +x tchMaterial-parser-mac-arm64
           
-          # 压缩
+          # 压缩为 zip
           zip -r tchMaterial-parser-mac-arm64.zip tchMaterial-parser-mac-arm64
 
       - name: Upload Release Asset
@@ -153,3 +165,4 @@ jobs:
           tag_name: ${{ inputs.tag || github.ref_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
